--- a/polls/templates/polls/home.html
+++ b/polls/templates/polls/home.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-{{ request.user.role }}
+{% comment %} {{ request.user.role }} {% endcomment %}
 
 
     <!-- add new poll row -->
