--- a/templates/base.html
+++ b/templates/base.html
@@ -54,11 +54,13 @@
                   Account
                 </a>
                 <ul class="dropdown-menu">
+                  {% if request.user.is_authenticated %}
+                  <li><a class="dropdown-item" href="{%  url 'users:profile' %}">Profile</a></li>
+                  <li><a class="dropdown-item" href="{% url  'users:user-logout' %}">Logout</a></li>
+                  {% else %}
                   <li><a class="dropdown-item" href="{%  url 'users:select-role' %}">Register</a></li>
                   <li><a class="dropdown-item" href="{%  url 'users:user-login' %}">Login</a></li>
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{% url 'users:user-logout' %}">Logout</a></li>
+                  {% endif %}
                 </ul>
             </li>
             <li class="nav-item dropdown">
